--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume - Mohamed Feroz</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
     <div class="container">
@@ -20,11 +21,10 @@
                 </div>
     
                 <div class="info">
-                    <p ><strong>Email: </strong>mhdferoz@outlook.com</p>
-                    <p ><strong>PH:</strong>  1234567890</p>
-                    <p ><strong>Website:</strong> ferozresume.vercel.app</p>
-                    
-                </div>
+                    <p><i class="fas fa-envelope"></i> feroz@example.com</p>
+                    <p><i class="fas fa-phone"></i> +91 9876543210</p>
+                    <p><i class="fas fa-globe"></i> www.ferozportfolio.com</p>
+                  </div>
             </div>
 
             <div class="about-me">
