view pos project

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                 </div>
     
                 <div class="info">
-                    <p><i class="fas fa-envelope"></i> feroz@example.com</p>
+                    <p><i class="fas fa-envelope"></i> feroz@outlook.com</p>
                     <p><i class="fas fa-phone"></i> +91 9876543210</p>
-                    <p><i class="fas fa-globe"></i> www.ferozportfolio.com</p>
+                    <p><i class="fas fa-globe"></i> ferozresume.vercel.app.com</p>
                   </div>
             </div>
 
@@ -94,7 +94,8 @@
                 <h2>Projects</h2>
                 <ul>
                     <li><strong>Personal Portfolio Website:</strong> A responsive portfolio website showcasing my skills and projects.</li>
-                    <li><strong>POS:</strong> Developed a basic billing and inventory management software.</li>
+                    <li><strong>POS:</strong> Developed a basic billing and inventory management software. (ongoing)</li>
+                    <br><a href="https://posproject37.vercel.app" target="_blank"><button class="btn">View POS Project</button></a>
                 </ul>
             </div>
         </div>
