--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="info">
                     <p><i class="fas fa-envelope"></i> feroz@outlook.com</p>
                     <p><i class="fas fa-phone"></i> +91 9876543210</p>
-                    <p><i class="fas fa-globe"></i> ferozresume.vercel.app.com</p>
+                    <p><i class="fas fa-globe"></i> ferozresume.vercel.app</p>
                   </div>
             </div>
 
