profile pic img tag to css bg image prop - to hide img link in src in inspect option

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div class="container">
         <div class="sidebar">
-            <img src="https://lh3.googleusercontent.com/pw/AP1GczPEY2lt3OjZEMxPeCEh7-Vv4qoTnQWh8BQIu1s2bkE5qJAle83X3Hbfjkx0bkPMk19Npy7shcciyORO5RGEV8ZV8ibObV0J46N6iWtTylAOFrP62bzDUAD9CbXUPmVY9TJRw7xAW9Vs7sDi-LbXFJ8K=w645-h913-s-no-gm?authuser=0" alt="Mohamed Feroz" class="profile-pic">
-            
+            <div class="profile-pic" oncontextmenu="return false;"></div>
+
             <!---->
             <div class="welcome">
                 <div class="intro">
