download cv - updated cv

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="social-links">
                     <a href="https://l.instagram.com/?u=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fmohamed-feroz&e=AT3Ebtr1ozx-SeBudgWK9oh8bpFJ6tP54hbWqL9InY6geQ0PGNSPG9QE-q8Mhhk9VuIrL6Q_czA9OkQ3bbzCTMI94E2sVDyB" ><button class="btn">Linkedin</button></a>
                 </div>
-                <a href="resume.png" download><button class="btn">Download CV</button></a>
+                <a href="resume.pdf" download><button class="btn">Download CV</button></a>
                 
             </div>
                        
